examples/k3d/manifest/couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-k3d
  labels:
    app: couchdb
spec:
  ports:
    - port: 5984
  selector:
    app: couchdb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-pvc
      containers:
        - image: ibmcom/couchdb3:3.1.1
          name: couchdb-dev
          ports:
            - containerPort: 5984
              name: couchdb
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
